--- a/css/style.scss
+++ b/css/style.scss
@@ -1,15 +1,121 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;500;700&display=swap');
 
-$pri: #283c52;
-$sec:  #d33e4f;
+$pri: #143952;
+$sec:  #F43C4F;
 $w: #f7fafe;
+$t: #606060;
 
 body {
     font-family: Poppins;
+    color: $pri;
 }
 
 .wrapper {
-    background-image: url(./img/bg.png);
+    background-image: url('/img/bg.png');
     background-size: cover;
     background-repeat: no-repeat;
+
+    width: 100%;
+    height: 100vh;
+
+}
+
+.header {
+    display: flex;
+    justify-content: space-between;
+    padding: 5rem 5rem;
+}
+
+.header__items {
+    display: flex;
+    align-items: center;
+}
+
+.header__logo {
+    width: 25rem;
+    height: auto;
+}
+
+.header-button {
+    font-size: 3rem;
+    margin: 0 4rem;
+
+    transition: all .2s;
+
+    &:last-child {
+        margin-left: 6rem;
+        margin-right: 0;
+        background-color: $sec;
+        color: $w;
+
+        padding: 2rem 6rem;
+
+        align-items: center;
+        text-align: center;
+
+        border-radius: 1rem;
+
+        font-size: 2.5rem;
+
+        &:hover {
+            color: $pri;
+        }
+    }
+
+    &:hover {
+        cursor: pointer;
+        color: $sec;
+    }
+}
+
+.header-button--active {
+    font-weight: 700;
+
+    &:hover {
+        cursor: unset;
+        color: $pri;
+    }
+}
+
+.content {
+    display: flex;
+    padding: 0 5rem;
+}
+
+.content__info {
+    width: 40%;
+}
+
+.content__title {
+    font-size: 10rem;
+    font-weight: 700;
+}
+
+.content__subtitle {
+    color: $t;
+    font-size: 3rem;
+    font-weight: 300;
+    margin: 8rem 0;
+}
+
+.content__house {
+    width: 55vw;
+    height: auto;
+}
+
+.content__button {
+    background-color: $sec;
+    color: $w;
+    border: none;
+    padding: 2rem 6rem;
+    border-radius: 1rem;
+    font-size: 2rem;
+    font-weight: 700;
+
+    transition: all .2s;
+
+    &:hover {
+        background-color: $pri;
+        cursor: pointer;
+    }
 }
