--- a/css/style.scss
+++ b/css/style.scss
@@ -95,12 +95,12 @@ body {
     color: $t;
     font-size: 3rem;
     font-weight: 300;
-    margin: 8rem 0;
+    margin: 4rem 0;
 }
 
 .content__house {
-    width: 55vw;
-    height: auto;
+    height: 30vw;
+    width: auto;
 }
 
 .content__button {
@@ -118,4 +118,83 @@ body {
         background-color: $pri;
         cursor: pointer;
     }
+}
+
+.footer {
+    margin: 0 5rem;
+    display: flex;
+}
+
+.footer-search {
+    width: 80%;
+}
+
+.search__bar-bar {
+    border: 0;
+    border-bottom: black 0.1rem solid;
+    margin: 2rem 0;
+    width: 100%;
+}
+
+.search-buttons {
+    display: flex;
+    justify-content: start;
+}
+
+.search__button {
+    border: 0;
+    font-family: Poppins;
+    background-color: white;
+
+    margin: 0 3rem;
+
+    width: 20rem;
+
+    height: 10rem;
+
+    box-shadow: 0px 0px 10px 4px rgba(34, 60, 80, 0.14);
+}
+
+.search__search {
+    border: 0;
+    font-family: Poppins;
+    background-color: $sec;
+    color: $w;
+    font-size: 3rem;
+    box-shadow: black 1rem;
+
+    margin: 0 3rem;
+
+    width: 20rem;
+    height: 10rem;
+}
+
+.search-button__title {
+    font-size: 3rem;
+    color: $pri;
+    font-weight: 500;
+}
+
+.search-button__info {
+    font-size: 2rem;
+    color:#929292;
+    font-weight: 300;
+}
+
+.footer-info {
+    width: 20%;
+    text-align: center;
+    align-items: center;
+    color: black;
+
+    margin-top: 8rem;
+}
+
+.footer-info__desc {
+    font-size: 3rem;
+}
+
+.footer-info__loc {
+    font-size: 3rem;
+
 }
