--- a/css/style.css
+++ b/css/style.css
@@ -135,6 +135,20 @@ body {
   width: 20rem;
   height: 10rem;
   box-shadow: 0px 0px 10px 4px rgba(34, 60, 80, 0.14);
+  transition: all .2s;
+}
+
+.search__button:hover {
+  cursor: pointer;
+  background-color: #F43C4F;
+}
+
+.search__button:hover .search-button__title {
+  color: #f7fafe;
+}
+
+.search__button:hover .search-button__info {
+  color: #f7fafe;
 }
 
 .search__search {
@@ -147,6 +161,13 @@ body {
   margin: 0 3rem;
   width: 20rem;
   height: 10rem;
+  transition: all .2s;
+}
+
+.search__search:hover {
+  background-color: #143952;
+  color: #F43C4F;
+  cursor: pointer;
 }
 
 .search-button__title {
@@ -166,7 +187,7 @@ body {
   text-align: center;
   align-items: center;
   color: black;
-  margin-top: 8rem;
+  margin-top: 2rem;
 }
 
 .footer-info__desc {
@@ -175,4 +196,11 @@ body {
 
 .footer-info__loc {
   font-size: 3rem;
+}
+
+.search__field {
+  border: none;
+  border-bottom: 0.1rem black solid;
+  margin: 1rem 0;
+  width: 100%;
 }
