--- a/css/style.scss
+++ b/css/style.scss
@@ -153,6 +153,21 @@ body {
     height: 10rem;
 
     box-shadow: 0px 0px 10px 4px rgba(34, 60, 80, 0.14);
+
+    transition: all .2s;
+
+    &:hover {
+        cursor: pointer;
+        background-color: $sec;
+
+        .search-button__title {
+            color: $w;
+        }
+
+        .search-button__info {
+            color: $w;
+        }
+    }
 }
 
 .search__search {
@@ -167,6 +182,14 @@ body {
 
     width: 20rem;
     height: 10rem;
+
+    transition: all .2s;
+
+    &:hover {
+        background-color: $pri;
+        color:#F43C4F;
+        cursor: pointer;
+    }
 }
 
 .search-button__title {
@@ -187,7 +210,7 @@ body {
     align-items: center;
     color: black;
 
-    margin-top: 8rem;
+    margin-top: 2rem;
 }
 
 .footer-info__desc {
@@ -197,4 +220,11 @@ body {
 .footer-info__loc {
     font-size: 3rem;
 
+}
+
+.search__field {
+    border: none;
+    border-bottom: 0.1rem black solid;
+    margin: 1rem 0;
+    width: 100%;
 }
