--- a/css/adaptive.css
+++ b/css/adaptive.css
@@ -1,4 +1,10 @@
 @media (max-width: 1000px) {
+  .header__logo {
+    max-width: 10rem;
+    width: 100%;
+    height: 5rem;
+    text-align: center;
+  }
   .content-info {
     display: flex;
     flex-direction: column;
@@ -11,5 +17,14 @@
     font-size: calc(calc(1vh + 1vw) * 5.5);
     margin-top: calc(1vh + 1vw);
     text-align: center;
+  }
+}
+
+@media (max-width: 550px) {
+  .content__title {
+    font-size: calc(calc(1vh + 1vw) * 4);
+  }
+  .footer {
+    display: block;
   }
 }
