--- a/css/adaptive.scss
+++ b/css/adaptive.scss
@@ -8,6 +8,13 @@ $sa: calc(vh + 5vw);
 
 @media (max-width: 1000px) {
 
+    .header__logo {
+        max-width: 10rem;
+        width: 100%;
+        height: 5rem;
+        text-align: center;
+    }
+
     .content-info {
         display: flex;
         flex-direction: column;
@@ -26,5 +33,15 @@ $sa: calc(vh + 5vw);
 
     .content__subtitle {
     }
+}
 
+@media (max-width: 550px) {
+    
+    .content__title {
+        font-size: calc(#{$a} * 4);
+    }
+
+    .footer {
+        display: block;
+    }
 }
