--- a/css/adaptive.css
+++ b/css/adaptive.css
@@ -1,9 +1,14 @@
 @media (max-width: 1000px) {
   .header__logo {
-    max-width: 10rem;
+    max-width: 20rem;
     width: 100%;
-    height: 5rem;
+    height: auto;
     text-align: center;
+    display: none;
+  }
+  .header__items {
+    width: 100%;
+    justify-content: space-evenly;
   }
   .content-info {
     display: flex;
@@ -18,6 +23,9 @@
     margin-top: calc(1vh + 1vw);
     text-align: center;
   }
+  .footer-info {
+    margin-top: 5rem;
+  }
 }
 
 @media (max-width: 550px) {
@@ -26,5 +34,107 @@
   }
   .footer {
     display: block;
+  }
+}
+
+@media (max-width: 410px) {
+  .header {
+    padding: 0;
+  }
+  .content {
+    padding: 0;
+  }
+  .footer {
+    padding: 0;
+    margin: 0;
+  }
+  .header__items {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+  }
+  .header-button {
+    font-size: 2rem;
+    width: 40%;
+    padding: 0.3rem;
+    margin: 1rem;
+    margin-top: 1rem;
+    background-color: #F43C4F;
+    color: #f7fafe;
+  }
+  .header-button:hover {
+    background-color: transparent;
+  }
+  .header-button--active {
+    color: #F43C4F;
+    background-color: transparent;
+  }
+  .header-button--active:hover {
+    color: #F43C4F;
+  }
+  .header-button:last-child {
+    padding: 0.3rem;
+    background-color: #F43C4F;
+    color: #f7fafe;
+    width: 40%;
+    border-radius: 0;
+    margin: 1rem;
+    margin-top: 1rem;
+    font-size: 2rem;
+  }
+  .header-button:last-child:hover {
+    color: #F43C4F;
+    background-color: transparent;
+  }
+  .content__title {
+    margin-top: 5vh;
+  }
+  .content__subtitle {
+    font-size: 1.5rem;
+    text-align: center;
+    line-height: 1.6;
+    margin: 2rem 0;
+  }
+  .footer-search {
+    width: 100%;
+  }
+  .search__bar {
+    width: 90%;
+    margin: 0 auto;
+  }
+  .search-buttons {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+  }
+  .search__button {
+    margin: 0.5rem;
+    width: 40%;
+    height: 5rem;
+  }
+  .search-button__title {
+    font-size: 2rem;
+  }
+  .search-button__info {
+    font-size: 1rem;
+  }
+  .search__search {
+    margin: 0.5rem;
+    width: 40%;
+    height: 5rem;
+    font-size: 2rem;
+  }
+  .footer-info {
+    margin-top: 3rem;
+    width: 100%;
+  }
+  .footer-info__desc {
+    font-size: 2rem;
+  }
+  .footer-info__loc {
+    font-size: 2rem;
   }
 }
