--- a/css/style.css
+++ b/css/style.css
@@ -24,7 +24,7 @@ body {
 }
 
 .header__logo {
-  max-width: 25rem;
+  max-width: 20rem;
   width: 100%;
   height: auto;
 }
@@ -133,8 +133,8 @@ body {
   font-family: Poppins;
   background-color: white;
   margin: 0 calc((1vw + 1vh) * 0.8);
-  width: 12vw;
-  height: 10rem;
+  width: 20vw;
+  height: 15vh;
   box-shadow: 0px 0px 10px 4px rgba(34, 60, 80, 0.14);
   transition: all .2s;
 }
@@ -160,8 +160,8 @@ body {
   font-size: calc(calc(1vh + 1vw) * 1.1);
   box-shadow: black 1rem;
   margin: 0 3rem;
-  width: 20rem;
-  height: 10rem;
+  width: 20vw;
+  height: 15vh;
   transition: all .2s;
 }
 
@@ -193,6 +193,7 @@ body {
 
 .footer-info__desc {
   font-size: calc(calc(1vh + 1vw) * 1.2);
+  margin-bottom: 2vh;
 }
 
 .footer-info__loc {
