--- a/css/style.scss
+++ b/css/style.scss
@@ -35,7 +35,7 @@ body {
 }
 
 .header__logo {
-    max-width: 25rem;
+    max-width: 20rem;
     width: 100%;
     height: auto;
 }
@@ -152,9 +152,9 @@ body {
 
     margin: 0 calc((1vw + 1vh) * 0.8);
 
-    width: 12vw;
+    width: 20vw;
 
-    height: 10rem;
+    height: 15vh;
 
     box-shadow: 0px 0px 10px 4px rgba(34, 60, 80, 0.14);
 
@@ -184,8 +184,8 @@ body {
 
     margin: 0 3rem;
 
-    width: 20rem;
-    height: 10rem;
+    width: 20vw;
+    height: 15vh;
 
     transition: all .2s;
 
@@ -219,6 +219,7 @@ body {
 
 .footer-info__desc {
     font-size: calc(#{$a} * 1.2);
+    margin-bottom: 2vh;
 
 }
 
