--- a/css/adaptive.css
+++ b/css/adaptive.css
@@ -28,7 +28,23 @@
   }
 }
 
-@media (max-width: 550px) {
+@media (max-width: 710px) {
+  .search-buttons {
+    flex-wrap: wrap;
+  }
+  .search__button {
+    width: 40%;
+    height: 8vh;
+    margin: 1rem calc((1vw + 1vh) * 0.8);
+  }
+  .search__search {
+    width: 40%;
+    height: 8vh;
+    margin: 1rem calc((1vw + 1vh) * 0.8);
+  }
+}
+
+@media (max-width: 555px) {
   .content__title {
     font-size: calc(calc(1vh + 1vw) * 4);
   }
@@ -37,7 +53,7 @@
   }
 }
 
-@media (max-width: 410px) {
+@media (max-width: 555px) {
   .header {
     padding: 0;
   }
