--- a/css/adaptive.scss
+++ b/css/adaptive.scss
@@ -47,10 +47,24 @@ $sa: calc(vh + 5vw);
 }
 
 @media (max-width: 710px) {
-    
+    .search-buttons {
+        flex-wrap: wrap;
+    }
+
+    .search__button {
+        width: 40%;
+        height: 8vh;
+        margin: 1rem calc((1vw + 1vh) * 0.8);
+    }
+
+    .search__search {
+        width: 40%;
+        height: 8vh;
+        margin: 1rem calc((1vw + 1vh) * 0.8);
+    }
 }
 
-@media (max-width: 550px) {
+@media (max-width: 555px) {
     
     .content__title {
         font-size: calc(#{$a} * 4);
@@ -61,7 +75,7 @@ $sa: calc(vh + 5vw);
     }
 }
 
-@media (max-width: 410px) {
+@media (max-width: 555px) {
     .header {
         padding: 0;
     }
