--- a/css/style.scss
+++ b/css/style.scss
@@ -160,6 +160,8 @@ body {
 
     transition: all .2s;
 
+    position: relative;
+
     &:hover {
         cursor: pointer;
         background-color: $sec;
@@ -172,6 +174,15 @@ body {
             color: $w;
         }
     }
+}
+
+.search-popup {
+    display: none;
+    z-index: 10;
+}
+
+.search__button--active {
+    background-color: black;
 }
 
 .search__search {
