--- a/css/style.css
+++ b/css/style.css
@@ -154,12 +154,34 @@ body {
 }
 
 .search-popup {
-  display: none;
+  position: absolute;
+  font-size: 3rem;
+  color: #143952;
+  text-align: center;
+  background-color: white;
+  width: 100%;
+  top: -100%;
+  left: 0;
+  transform: translate(0, 20%);
   z-index: 10;
+  display: none;
+}
+
+.search-popup--last {
+  top: -40%;
+  z-index: 10;
+  display: none;
+}
+
+.popup__item:hover {
+  cursor: pointer;
+  background-color: #143952;
+  color: #f7fafe;
 }
 
 .search__button--active {
-  background-color: black;
+  display: block;
+  position: absolute;
 }
 
 .search__search {
