--- a/css/style.scss
+++ b/css/style.scss
@@ -162,6 +162,7 @@ body {
 
     position: relative;
 
+
     &:hover {
         cursor: pointer;
         background-color: $sec;
@@ -185,7 +186,7 @@ body {
 
     color: $pri;
     text-align: center;
-    background-color: white;
+    background-color: none;
 
     width: 100%;
 
@@ -198,9 +199,15 @@ body {
 
     display: none;
 
+    opacity: 0;
+
     transition: opacity .2s;
+    transition: all .2s ease;
 
     transform: translate(0, 120%);
+    
+
+    transition: transform .5s;
 }
 
 .search-popup--last {
@@ -215,6 +222,7 @@ body {
 
 .popup__item {
 
+    opacity: 0;
 
     &:hover {
         cursor: pointer;
