--- a/css/style.css
+++ b/css/style.css
@@ -160,15 +160,18 @@ body {
   font-size: 3rem;
   color: #143952;
   text-align: center;
-  background-color: white;
+  background-color: none;
   width: 100%;
   top: -100%;
   left: 0;
   transform: translate(0, 20%);
   z-index: 10;
   display: none;
+  opacity: 0;
   transition: opacity .2s;
+  transition: all .2s ease;
   transform: translate(0, 120%);
+  transition: transform .5s;
 }
 
 .search-popup--last {
@@ -176,6 +179,10 @@ body {
   z-index: 10;
   display: none;
   transition: all .2s;
+}
+
+.popup__item {
+  opacity: 0;
 }
 
 .popup__item:hover {
