--- a/css/adaptive.scss
+++ b/css/adaptive.scss
@@ -44,6 +44,13 @@ $sa: calc(vh + 5vw);
     .footer-info {
         margin-top: 5rem;
     }
+
+    .search-popup {
+    }
+    
+    .search__button--active {
+        
+    }
 }
 
 @media (max-width: 710px) {
